Single question & answer endpoint (#819)
* question & answer endpoint backend

* question & answer endpoint frontend
