# frontend-nextjs/src/models/answer.ts
@@ -13,14 +13,6 @@ export type AnswerType = "ShortAnswer" | "MultiChoice" | "MultiSelect" | "DropDo
 
 export type AnswerData = string | string[];
 
-export async function getAllCommonAnswers(applicationId: string): Promise<Answer[]> {
-    return await apiRequest<Answer[]>(`/api/v1/application/${applicationId}/answers/common`);
-}
-
-export async function getAllRoleAnswers(applicationId: string, roleId: string): Promise<Answer[]> {
-    return await apiRequest<Answer[]>(`/api/v1/application/${applicationId}/role/${roleId}/answers`);
-}
-
 export async function updateApplicationRoles(applicationId: string, roles: any): Promise<void> {
   return await apiRequest<void>(`/api/v1/application/${applicationId}/roles`, {
     method: "PATCH",
